Fixed cd2.yml file

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,6 +18,9 @@ on:
 env:
   AWS_REGION: us-east-2
   AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+  ECR_REPOSITORY: rohana-strapi-repo
+  ECS_CLUSTER_NAME: rohana-strapi-cluster
+  ECS_SERVICE_NAME: rohana-strapi-service
 
 jobs:
   deploy:
@@ -25,40 +28,64 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.8.3
+      - name: Determine Image URI
+        if: ${{ github.event.inputs.action == 'apply' }}
+        run: |
+          IMAGE_TAG="${{ github.event.inputs.image_tag || 'latest' }}"
+          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
+          echo "IMAGE_URI=${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG" >> $GITHUB_ENV
 
       - name: Terraform Init
         run: terraform init
 
+      - name: Generate image.auto.tfvars
+        if: ${{ github.event.inputs.action == 'apply' }}
+        env:
+          EXECUTION_ROLE_ARN: ${{ secrets.EXECUTION_ROLE_ARN }}
+          TASK_ROLE_ARN: ${{ secrets.TASK_ROLE_ARN }}
+          APP_KEYS: ${{ secrets.APP_KEYS }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          ADMIN_JWT_SECRET: ${{ secrets.ADMIN_JWT_SECRET }}
+          API_TOKEN_SALT: ${{ secrets.API_TOKEN_SALT }}
+          CODEDEPLOY_ROLE_ARN: ${{ secrets.CODEDEPLOY_ROLE_ARN }}
+        run: |
+          echo "container_image = \"$IMAGE_URI\"" > image.auto.tfvars
+          echo "execution_role_arn = \"${EXECUTION_ROLE_ARN//[$'\t\r\n']}\"" >> image.auto.tfvars
+          echo "task_role_arn = \"${TASK_ROLE_ARN//[$'\t\r\n']}\"" >> image.auto.tfvars
+          echo "codedeploy_role_arn = \"${CODEDEPLOY_ROLE_ARN//[$'\t\r\n']}\"" >> image.auto.tfvars
+          echo "app_keys = \"${APP_KEYS//[$'\t\r\n']}\"" >> image.auto.tfvars
+          echo "jwt_secret = \"${JWT_SECRET//[$'\t\r\n']}\"" >> image.auto.tfvars
+          echo "admin_jwt_secret = \"${ADMIN_JWT_SECRET//[$'\t\r\n']}\"" >> image.auto.tfvars
+          echo "api_token_salt = \"${API_TOKEN_SALT//[$'\t\r\n']}\"" >> image.auto.tfvars
+
+      - name: Terraform Plan
+        if: ${{ github.event.inputs.action == 'apply' }}
+        run: terraform plan
+
       - name: Terraform Apply
         if: ${{ github.event.inputs.action == 'apply' }}
-        run: |
-          terraform apply -auto-approve -var="image_uri=${{ secrets.ECR_REPOSITORY }}:${{ github.event.inputs.image_tag || github.sha }}"
+        run: terraform apply -auto-approve
 
       - name: Terraform Destroy
         if: ${{ github.event.inputs.action == 'destroy' }}
         run: terraform destroy -auto-approve
-
-      - name: Trigger CodeDeploy Deployment
-        if: ${{ github.event.inputs.action == 'apply' }}
-        run: |
-          aws deploy create-deployment \
-            --application-name rohana-strapi-app \
-            --deployment-group-name rohana-strapi-dg \
-            --deployment-config-name CodeDeployDefault.ECSCanary10Percent5Minutes \
-            --description "GitHub Actions Deployment - ${{ github.sha }}" \
-            --github-location repository=${{ github.repository }},commitId=${{ github.sha }} \
-            --region $AWS_REGION
-
+        env:
+          TF_VAR_admin_jwt_secret: ${{ secrets.ADMIN_JWT_SECRET }}
+          TF_VAR_jwt_secret: ${{ secrets.JWT_SECRET }}
+          TF_VAR_app_keys: ${{ secrets.APP_KEYS }}
+          TF_VAR_api_token_salt: ${{ secrets.API_TOKEN_SALT }}
+          TF_VAR_container_image: "dummy"
+          TF_VAR_execution_role_arn: ${{ secrets.EXECUTION_ROLE_ARN }}
+          TF_VAR_task_role_arn: ${{ secrets.TASK_ROLE_ARN }}
