Fixed cd2.yml file

--- a/.github/workflows/cd2.yml
+++ b/.github/workflows/cd2.yml
@@ -22,7 +22,7 @@ on:
         description: 'The path to the Dockerfile'
         required: true
         type: string
-        default: ./my-strapi-app/
+        default: ./my-strapi-project/
 
 env:
   ECS_TASK_DEFINITION: "rohana-strapi-task"
